--- a/COPY/Dockerfile
+++ b/COPY/Dockerfile
@@ -1,5 +1,5 @@
 FROM almalinux:8
 RUN yum install nginx -y
-RUN rm -rf /usr/shared/ngins/html/index.html
-COPY index.html /usr/shared/ngins/html/
+RUN rm -rf /usr/shared/nginx/html/index.html
+COPY index.html /usr/shared/nginx/html/
 CMD ["nginx","-g","daemon off;"]
